changed subtopics to related, fixed comma spacing

--- a/static/scss/_topics.scss
+++ b/static/scss/_topics.scss
@@ -16,9 +16,9 @@
 	ul {
 		padding:0;
 
-		.plus {
-			padding-left: .5em;
-			padding-right: .15em;
+		.comma {
+			//padding-left: .5em;
+			padding-right: .2em;
 		}
 	}
 }
